actualizando la web

--- a/index.html
+++ b/index.html
@@ -167,7 +167,18 @@ img.imagen-slider {
     color: white;
     font-size: 19px;
 }
-
+@media(max-width:560px){
+    .vista-slider {
+    width: 54rem;
+    height: 23.8%;
+    margin: 0 auto;
+    margin-top: 8px;
+    border-radius: 6px;
+}
+.tamimagen{
+    width: 87%;
+}
+}
 </style>
 </head>
 <body class="general-body">
@@ -218,7 +229,7 @@ img.imagen-slider {
  <div class="Informacion">
         <h1>Factura desde los sistema del contribuyente</h1>
         <p class="parrafo">¿Cómo opera la facturación electrónica?</p> 
-         <img src="img/infografia.png" alt="">
+         <img class="tamimagen" src="img/infografia.png" alt="">
          
     </div>
 </div>
