--- a/index.html
+++ b/index.html
@@ -167,17 +167,32 @@ img.imagen-slider {
     color: white;
     font-size: 19px;
 }
-@media(max-width:560px){
-    .vista-slider {
-    width: 54rem;
-    height: 23.8%;
-    margin: 0 auto;
-    margin-top: 8px;
-    border-radius: 6px;
-}
 .tamimagen{
-    width: 87%;
+            width: 87%;
+        }
+@media screen and (max-width: 600px){
+        .vista-slider {
+        width: 54rem;
+        height: 23.8%;
+        margin: 0 auto;
+        margin-top: 8px;
+        border-radius: 6px;
+    }
+    .tamimagen{
+            width: 100%;
+        }   
 }
+@media screen and (max-width: 992px) {
+    .tamimagen{
+            width: 100%;
+        } 
+        .vista-slider {
+        width: 54rem;
+        height: 23.8%;
+        margin: 0 auto;
+        margin-top: 8px;
+        border-radius: 6px;
+    } 
 }
 </style>
 </head>
@@ -241,8 +256,9 @@ img.imagen-slider {
          <p class="parrafo">- Migramos la facturación Electronica desde tu Aplicación.</p> 
          <p class="parrafo">- Creamos DLL para FACTURACION ELECTRONICA.</p>
          <p class="parrafo">- Damos Soporte Tecnico De aplicaciones().</p>
-         <p class="parrafo">- Modificamos las aplicaciones creadas y segun solicitud de tus Requerimientos.</p>
-         
+         <p class="parrafo">- Modificamos las aplicaciones creadas y segun solicitud de tus Requerimientos.</p></br>
+         <p class="parrafo">Contactarce con: <h1 >918849314</h1></p>
+        
     </div>
 </div>
 <div class="Nosotros">
